css/custom.css
@import url(http://weloveiconfonts.com/api/?family=entypo);

/* entypo */
[class*="entypo-"]:before {
  font-family: 'entypo', sans-serif;
  font-size: 4rem;
  color: #000;
}

body {
  font-family: brandon-grotesque, sans-serif;
  position: relative;
}

section {
  padding-top: 3.75rem;
  margin-top: -3.75rem;
  background-position: center;
  background-size: cover;
  width: 100%;
  display: flex;
  text-align: center;
}

#map {
  height: 525px;
  width: 100%;
}

.button {
  display: inline-block;
  height: 40px;
  line-height: 40px;
  margin: 15px auto;
  padding: 0 15px;
  box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
  background: #fff;
  border-radius: 4px;
  border: none;
  font-weight: 600;
  color: #000;
}

.button:hover {
  background: #BDBDBD;
  color: #FFF;
}

.phone:before {
    content: '\1F4DE';
}

.mail:before {
    content: '\2709';
}

.mail:before, .phone:before {
    padding-right: 10px;
    font: 400 16px;
}

#contact {
  background-image: linear-gradient(
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.5)
  ), url(../assets/img/background.png);
  min-height: 850px;
  color: #FFF;
}


.col-lg-3 {
  text-align: center;
  margin: auto;
}

.loc-info {
  text-align: left;
  display: inline-block;
}

.loc-info-header {
  font-weight: bold;
}

footer {
  background-color: #EEEEEE;
  height: 100%;
  display: flex;
  margin: 0 auto;
}

.footer-brand {
  height: 35px;
  width: auto;
}

#copyright {
  font-weight: bold;r
}

#ref {
  color: #000;
}

.center {
  text-align: center;
  margin: auto;
}

.navbar {
  box-shadow:0 0 15px rgba(0, 0, 0, 0.4);
  padding: .5rem 0;
}

.nav-link {
  font-size: 1.15rem;
}

#home {
  background-image: linear-gradient(
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.5)
  ), url(../assets/img/banner.jpg);
  background-size: cover;
  width: 100%;
  height: 975px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}

.hero {
  color: #fff;
  line-height: 5px;
}

.hero h1 {
  font-size: 4.5rem;
  font-weight: 600;
  text-transform: uppercase;
  margin-bottom: 0;
}

.hero h4 {
  color: #EEEEEE;
  font-size: 2rem;
  display: inline-block;
}

.title {
  padding: 1.25rem 15px;
  margin-top: 25px;
  margin-bottom: 25px;
  font-size: 2.5rem;
  text-transform: uppercase;
  font-weight: bold;
  text-align: left;
  color: #FFF;
  border-left: 1.25rem solid #000;
}

.auto {
  margin: auto;
}

#about {
  background-image: linear-gradient(
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.5)
  ), url(../assets/img/background.png);
  color: #EEEEEE;
  margin-bottom: 3.75rem;
}

.about-text {
  text-align: left !important;
  font-size: 1.5rem;
}

.swiper-container {
  padding: 2.5rem 0;
  width: 100%;
  height: 100%;
}

.swiper-pagination-bullet-active {
  opacity: 1;
  background: #fff !important;
}

.swiper-slide img {
  width: 100%;
  max-height: 630px;
}

#classes {
  background-image: linear-gradient(
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.5)
  ), url(../assets/img/classes-bg.jpg);
  color: #EEEEEE;
  margin-bottom: 3.75rem;
}
#schedule {
  background-image: linear-gradient(
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.5)
  ), url(../assets/img/classes-bg-2.jpg);
  color: #EEEEEE;
  margin-bottom: 3.75rem;
  min-height: 700px;
}
#trainers {
  background-image: linear-gradient(
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.5)
  ), url(../assets/img/t3.jpg);
  color: #EEEEEE;
  margin-bottom: 3.75rem;
}

.team-item {
	position: relative;
	padding-bottom: 84px;
	background-color: #fff;
  box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);
}

.trainer-img {
  max-width: 100%;
  height: auto;
  margin: 0;
}

/* .about-img {
  max-width: 100%;
  height: auto;
  margin: 10px auto;
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
} */

.carousel {
  margin: 0 auto;
  max-width: 85%;
}

.bullets {
  text-align: left;
  font-size: 1.25rem;
}

.text {
	position: absolute;
	bottom: 0;
	left: 0;
	background-color: #fff;
	overflow-y: scroll;
	max-height: 84px;
	transition: all .6s ease-in-out;
	padding: 7.5px 7.5px 13px;
	right: 0;
}

.text h3 {
	transition: all .5s ease-in-out;
	max-height: 36px;
	overflow: hidden;
	color: #333;
  text-align: left;
}

.text h4 {
  color: #616161;
  font-weight: bold;
  text-align: left;
  font-size: 0.80rem
}

.team-item .team-image {
  position: relative;
}

.team-item p {
	color: #616161;
	line-height: 1.2;
	text-align: left;
}

.team-item:hover h3, .team-item:hover .text {
	max-height: 400px;
}

.team-item .text {
  max-height: none;
  height: 84px;
}

.team-item:hover .text {
  height: 100%;
  max-height: 100%;
}
table {
  margin: 30px 0;
}
#header th {
  text-align: center;
}
th {
  background-color: #000000;
}
tr:nth-child(odd) {
    background-color: #000000;
    color: #EEEEEE;
}

tr:nth-child(even) {
    background-color: #EEEEEE;
    color: #000000;
}

@media (max-width: 500px) {
  .desc {
    text-align: center !important;
    padding: 1.25rem !important;
  }
  tr, td {
    padding: 1.25rem;
  }
}

@media (max-width: 692px) {
  .hero hr {
    display: none;
  }
  .about-img {
    width: 100%;
    height: auto;
    margin: 1.25rem auto;
  }
  .team-item {
    max-width: 300px;
    margin: 1.25rem auto;
  }
  .text h4 {
    margin-bottom: 0.25rem;
  }
  .team-item p {
    font-size: 1.5rem;
  }
}

@media (min-width: 500px) {
}

@media (min-width: 692px) {
  .team-item {
    max-width: 250px;
    display: inline-block;
    margin: 1.25rem;
  }
  .one-line {
    margin: 25px 0 0;
  }
  .team-item p {
    font-size: 1rem;
  }
}

@media (max-width: 768px) {
  .desktop {
    display: none;
  }
  thead, #header {
    display: none;
  }
	table, tbody, th, td, tr {
		display: block;
	}
	tr:nth-child(odd) td {
		border-bottom: 1px solid #eee;
  }
  tr:nth-child(even) td {
		border-bottom: 1px solid #9E9E9E;
  }
  td:nth-of-type(4) {
    border-bottom: none !important;
  }
  td:nth-of-type(3)::after {
    content: " Participants";
  }
  #map {
    margin: 1.25rem auto;
  }
}

@media (min-width: 768px) {
  .mobile {
    display: none;
  }
  mindbody-button {
    width: 175px;
  }
  .hero hr {
    display: inline-block;
    width: 75px;
    height: 1px;
    margin: 11.5px 15px;
    background-color: #EEEEEE;
  }
  #classes {
    min-height: 1050px;
  }
}

